src/yini_test/cases/golden/strict/valid/comments/semicolon-full-line-comments.strict.yini
@yini strict

; Full-line semicolon comment before a section.
^ Application
; Full-line semicolon comment before a member.
name = "strict-semicolon-comments"
enabled = true

/END
