src/yini_test/cases/golden/strict/invalid/comments/inline-semicolon-comment.strict.yini
@yini strict

^ Application
name = "strict-inline-semicolon-comment" ; Inline semicolon comments are not valid.

/END
